Web API: use POST method for call/launch actions
PUT method is idempotent so it can only be used to upload module
without side effects.
